syntax = "proto3";

option java_package = "ms.domwillia.jvmemory.protobuf";
option java_outer_classname = "Message";

import "allocations.proto";
import "definitions.proto";
import "flow.proto";
import "access.proto";

enum MessageType {
    CLASS_DEF = 0;

    ALLOC = 1;
    DEALLOC = 2;

    METHOD_ENTER = 3;
    METHOD_EXIT = 4;

    GETFIELD = 5;
    PUTFIELD = 6;

    STORE = 7;
    LOAD = 8;
}

message Variant {
    MessageType type = 1;
    int64 thread_id = 2;
    oneof payload {
        ClassDefinition class_def = 3;

        Allocation alloc = 4;
        Deallocation dealloc = 5;

        MethodEnter method_enter = 6;
        MethodExit method_exit = 7;

        GetField get_field = 8;
        PutField put_field = 9;

        Store store = 10;
        Load load = 11;
    }

}
